# cmake_learning

complie_one_sourcefile/: .gitignore  CMakeLists.txt  README.md  hello.cpp
many_dir_many_files/: .gitignore  CMakeLists.txt  Main.cpp  README.md
many_dir_many_files/import_src/: .gitignore  A.hpp
many_files_one_dir/: .gitignore  A.cpp  B.h  CMakeLists.txt  CMakeLists0.txt
